--- a/public/css/mead-io-blog.css
+++ b/public/css/mead-io-blog.css
@@ -12,8 +12,8 @@
 * Spacing
 ****************************************/
 * {
-  -webkit-appearance: none;
-  -moz-appearance: none;
+ /* -webkit-appearance: none;
+  -moz-appearance: none;*/
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-tap-highlight-color: transparent;
