--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7721,6 +7721,33 @@ button.close {
   }
 }
 
+.level {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.flex {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.mr-1 {
+  margin-right: 1em;
+}
+
+[v-cloak] {
+  display: none;
+}
+
+.ml-a {
+  margin-left: auto;
+}
+
 /*====================== AJAX SPINNER =============================*/
 button {
   position: relative;
