--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,6 +8,12 @@
 // Bootstrap
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
 
+.level {display:flex; align-items: center}
+.flex { flex: 1; }
+.mr-1 {margin-right: 1em}
+[v-cloak] {display: none;}
+.ml-a {margin-left: auto;}
+
 /*====================== AJAX SPINNER =============================*/
 button{
     position: relative;
